fixed show page images from stretching

--- a/frontend/src/css/show.css
+++ b/frontend/src/css/show.css
@@ -10,8 +10,9 @@
   height: 70vh;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 100% 100%;
+  background-size: cover;
   width: 85%;
+  position: relative;
 }
 
 .name {
@@ -153,7 +154,7 @@
 }
 
 .show_slider_button_container {
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
   display: flex;
   flex-direction: row;
